<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="venue"
            type="com.example.mabrouk.eventtaskapp.models.Venue"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />
        <TextView
            android:text="@{venue.name}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_name_d"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_zone"
            />
        <TextView
            android:text="@{venue.timeZone}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_time_zone_d"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            />
        <TextView
            android:text="@{venue.fullAdress}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_address_d"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/venus_imges_recycler"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumberDetail"
            />
        <TextView
            android:text="@{venue.boxOfficeInfo.phoneNumberDetail}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_phoneNumberDetail"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_hours_detail"
            />
        <TextView
            android:text="@{venue.boxOfficeInfo.openHours}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_openHoursDetail"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accepted_payment_detail"
            />
        <TextView
            android:text="@{venue.boxOfficeInfo.acceptedPayment}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_acceptedPaymentDetail"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/will_call_detail"
            />
        <TextView
            android:text="@{venue.boxOfficeInfo.willCall}"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/venue_willCallDetail"
            />
    </LinearLayout>

</LinearLayout>
    </ScrollView>
</layout>