<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_5sdp"
    >

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--&gt;</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/event_type_d"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:id="@+id/event_date_d"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promoter"
            />

        <View
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:layout_marginEnd="@dimen/_5sdp" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:id="@+id/promoter_recycler"
        />


    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prices"
            />

        <View
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:layout_marginEnd="@dimen/_5sdp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price_recycler"
        />


    <LinearLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venues"
            />

        <View
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:background="@color/gray"
            android:layout_marginEnd="@dimen/_5sdp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/venue_view_pager"
        />
</LinearLayout>
